// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<div
  data-testid="button"
  style={
    Object {
      "border": "1px solid gray",
      "margin": "50px auto",
      "padding": "10px",
      "width": "150px",
    }
  }
>
  Hi 
  save
</div>
`;

exports[`matches snapshot 2 1`] = `
<div
  data-testid="button"
  style={
    Object {
      "border": "1px solid gray",
      "margin": "50px auto",
      "padding": "10px",
      "width": "150px",
    }
  }
>
  Hi 
  click me please
</div>
`;
